# 01_rabbitmq_rpc

./: .gitignore  README.md  clean.sh  mkclient.sh  mkdist.sh
rpc_src/: client.py  receiver.py  server.py
so_functions/: CMakeLists.txt  lib.cxx  lib.hxx  test.cxx
